Fixed portfolio-selector look on mobile

--- a/public_html/page_elements/css/portfolio-selector.css
+++ b/public_html/page_elements/css/portfolio-selector.css
@@ -127,17 +127,17 @@ div.cs-active {
 
 div.cs-skin-slide {
     color: #3e3e3b;
-    font-size: 1.5em;
+    font-size: 25px;
     width: 250px;
     height: 50px;
 }
 
-@media screen and (max-width: 30em) {
-    div.cs-skin-slide {
-        font-size: 1em;
-        width: 250px;
-    }
-}
+/*@media screen and (max-width: 30em) {*/
+    /*div.cs-skin-slide {*/
+        /*font-size: 1em;*/
+        /*width: 250px;*/
+    /*}*/
+/*}*/
 
 div.cs-skin-slide::before {
     content: '';
@@ -168,7 +168,7 @@ div.cs-skin-slide::before {
 @media screen and (max-width: 30em) {
     .cs-skin-slide > span {
         height: 60px;
-        line-height: 28px;
+        /*line-height: 28px;*/
     }
 }
 
@@ -203,8 +203,13 @@ div.cs-skin-slide::before {
 }
 
 @media screen and (max-width: 30em) {
+
     .cs-skin-slide .cs-options {
-        padding-top: 3em;
+        /*padding-top: 3em;*/
+    }
+
+    .cs-skin-slide > span::after,.cs-skin-slide.cs-active > span::after {
+        padding-bottom: 6px;
     }
 }
 
